--- a/index.html
+++ b/index.html
@@ -225,26 +225,67 @@
             <div class="swiper swiper_active">
                 <div class="swiper-wrapper">
                     <!-- 1 single swiper -->
-                    <div class="swiper-slide witr_swiper_height" style="background-image:url(static/image/slider1.png)">
+                    <div class="swiper-slide witr_swiper_height" style="background-image:url(static/image/my/slider1.jpg)">
                         <div class="witr_sw_text_area text-left">
                             <div class="witr_swiper_content">
                                 <h2>沃旭投資股份有限公司
                                 </h2>
-                                <p>We bring over 35 years of public practice experience to
-                                    clients our firm is a family business.
+                                <p>秉承專業、誠信、穩健的理念，為客戶提供最優質的投資服務，助力客戶在股票市場中取得成功
                                 </p>
                                 <div class="slider_btn">
                                     <div class="witr_btn_style">
                                         <div class="witr_btn_sinner">
-                                            <a class="witr_btn" href="service.html">Our Solution </a>
-                                            <a class="witr_btn active recpwit" href="about.html">
-                                            Read More</a>
+                                            <a class="witr_btn" href="#service">了解更多</a>
+                                            <!--<a class="witr_btn active recpwit" href="about.html">
+                                            Read More</a>-->
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="swiper-slide witr_swiper_height" style="background-image:url(static/image/my/slider2.jpg)">
+                        <div class="witr_sw_text_area text-left">
+                            <div class="witr_swiper_content">
+                                <h2 style="color: #0a0a0a">沃旭投資股份有限公司
+                                </h2>
+                                <p style="color: #0a0a0a;font-weight: bold">擁有豐富的市場知識和投資經驗，能夠為客戶提供準確、專業的投資建議
+                                </p>
+                                <div class="slider_btn">
+                                    <div class="witr_btn_style">
+                                        <div class="witr_btn_sinner">
+                                            <a class="witr_btn" href="#service">了解更多</a>
+                                            <!--<a class="witr_btn active recpwit" href="about.html">
+                                                Read More</a>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide witr_swiper_height" style="background-image:url(static/image/my/slider3.jpg)">
+                        <div class="witr_sw_text_area text-left">
+                            <div class="witr_swiper_content">
+                                <h2>沃旭投資股份有限公司
+                                </h2>
+                                <p>沃旭投資股份有限公司一家位於台灣的專業投資顧問公司，致力於為客戶提供全方位的投資顧問服務
+                                </p>
+                                <div class="slider_btn">
+                                    <div class="witr_btn_style">
+                                        <div class="witr_btn_sinner">
+                                            <a class="witr_btn" href="#service">了解更多</a>
+                                            <!--<a class="witr_btn active recpwit" href="about.html">
+                                                了解更多</a>-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
