--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-        <meta name="keywords" content=" web design html template">
-        <meta name="date" content="Dec 26">
+        <meta name="keywords" content="沃旭投資股份有限公司">
         <!-- Favicon Icon -->
-
+        <link rel="shortcut icon" href="./static/picture/my/logo.png" />
         <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="static/css/venobox.css">
         <link rel="stylesheet" type="text/css" href="static/css/plugin_theme_css.css">
@@ -59,7 +58,7 @@
                                     <img src="static/picture/logo1.png" alt="vica">
                                     </a>-->
                                     <a class="main_sticky_l" href="index.html" title="vica">
-                                    <img src="static/picture/logo2.png" alt="vica">
+                                    <img src="static/picture/my/logo.png" alt="vica" style="height: 40px;width: 40px;">
                                     </a>
                                 </div>
                             </div>
@@ -89,7 +88,7 @@
                         <div class="mobilemenu_con">
                             <div class="mobile_menu_logo text-center">
                                 <a href="" title="vica">
-                                <img src="static/picture/logo1.png" alt="vica">
+                                <img src="static/picture/my/logo.png" alt="vica" style="height: 40px;width: 40px;">
                                 </a>
                             </div>
                             <div class="mobile_menu_option">
@@ -100,7 +99,7 @@
                                     <div class="mobile_menu_content">
                                         <div class="mobile_menu_logo text-center">
                                             <a href="" title="vica">
-                                            <img src="static/picture/logo1.png" alt="vica">
+                                            <img src="static/picture/my/logo.png" alt="vica" style="height: 40px;width: 40px;">
                                             </a>
                                         </div>
                                         <div class="menu_area mobile-menu">
@@ -901,7 +900,7 @@
                         <div class="col-sm-12 col-md-6 col-lg-6">
                             <div class="widget widget_twr_description_widget">
                                 <div class="vica-description-area">
-                                    <a href="#"><img src="static/picture/logo2.png" alt="image"></a>
+                                    <a href="#"><img src="static/picture/my/logo.png" alt="image" style="width: 40px;height: 40px;"></a>
                                     <p>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我們將秉持以上理念和策略，客戶利益為首要目標，
                                         秉承著誠信、專業、勤奮和創新的理念，為客戶提供高效、全面的投資服務。<br>
