--- a/index.html
+++ b/index.html
@@ -446,14 +446,17 @@
                             <div class="witr_section_title_inner text-left">
                                 <!--<h2>COUNTRIES WE OFFER SUPPORT</h2>
                                 <h3>Visa Applications Just</h3>-->
-                                <h1>團隊核心價值</h1>
+                                <h1>沃旭證券</h1>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="witr_section_title">
                             <div class="witr_section_title_inner text-left">
-                                <p>投顧分析師的一項重要任務是協助客戶分散投資風險。他們通過深入的研究和分析，能夠識別不同市場、產業和資產類別之間的相關性和相互影響。藉此，他們可以幫助客戶在投資組合中適當地分配資金，降低單一投資的風險，增加整體投資的穩定性
+                                <p>
+                                    「沃旭證券」——你的專屬財富引擎，不僅僅是投資，更是成長與成功的夥伴！不只是投資平台，更是你成長與成功的夥伴！結合沃旭證券的全球視野與金玉峰投顧的專業，配合易經教授陶文的分析，助你穩賺股市、輕鬆避險，遠離套牢，財富不斷增長！
+                                    <br>
+                                    立即下載 掌握贏家優勢，開啟你的財富之路！
                                 </p>
                             </div>
                         </div>
@@ -771,7 +774,7 @@
                                 <div class="item_pos col-lg-12">
                                     <div class="witr_single_pslide">
                                         <div class="witr_pslide_image">
-                                            <img src="static/picture/pr-2.jpg" alt="image">
+                                            <img src="static/picture/my/pr-2.jpg" alt="image">
                                         </div>
                                         <div class="witr_content_pslide_text">
                                             <div class="witr_pslide_custom">
