--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                     <span>
                                     <i class="icofont-home"></i>1st Floor New World.</span>
                                     <a href="#">
-                                    <i class="icofont-envelope"></i>demo@example.com</a>
+                                    <i class="icofont-envelope"></i>@017wssmi</a>
                                 </p>
                             </div>
                         </div>
@@ -863,7 +863,7 @@
                             <div class="text_box all_icon_color">
                                 <i class="flaticon flaticon-call"></i>
                                 <h3>電話</h3>
-                                <p>+ 900 567 8922 </p>
+                                <p>+ 966 405 606 </p>
                             </div>
                         </div>
                     </div>
@@ -871,9 +871,16 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="service-item all_color_service text-center">
                             <div class="text_box all_icon_color">
-                                <i class="flaticon flaticon-mail"></i>
-                                <h3>電郵</h3>
-                                <p>demo@example.com </p>
+
+
+                                <!--<i class="flaticon flaticon-linkedin-3"></i>-->
+                                <a href="https://lin.ee/sGphEIq" >
+                                <i class="flaticon ">
+                                <img src="static/image/my/001-line.png">
+                                </i>
+                                <h3>Line@線上客服</h3>
+                                <p>@017wssmi </p>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -950,16 +957,21 @@
                                                     <i class="icofont-phone"></i>
                                                 </div>
                                                 <div class="footer-sociala-info">
-                                                    <p>+ 900 567 8922 </p>
+                                                    <p>+ 966 405 606 </p>
                                                 </div>
                                             </div>
                                             <div class="footer_s_inner">
-                                                <div class="footer-sociala-icon">
-                                                    <i class="icofont-envelope-open"></i>
-                                                </div>
-                                                <div class="footer-sociala-info">
-                                                    <p>demo@example.com</p>
-                                                </div>
+                                                <a href="https://lin.ee/sGphEIq" >
+                                                    <div class="footer-sociala-icon">
+                                                        <i class="">
+                                                            <img src="static/image/my/line.png" style="width: 18px;height: 18px;">
+                                                        </i>
+
+                                                    </div>
+                                                    <div class="footer-sociala-info">
+                                                        <p>@017wssmi</p>
+                                                    </div>
+                                                </a>
                                             </div>
                                             <div class="footer_s_inner">
                                                 <div class="footer-sociala-icon">
