--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                                 <!--<i class="flaticon flaticon-linkedin-3"></i>-->
                                 <a href="https://lin.ee/sGphEIq" >
                                 <i class="flaticon ">
-                                <img src="static/image/my/001-line.png">
+                                <img src="static/image/my/002-line.jpg">
                                 </i>
                                 <h3>Line@線上客服</h3>
                                 <p>@017wssmi </p>
